# ResidualBench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
configs/regimes/: README.md  residual_hybrid_etth1.yaml  residual_hybrid_etth2.yaml  residual_regime_autoencoder_etth1.yaml  residual_regime_autoencoder_jumprelu_sparse_etth1.yaml  residual_regime_autoencoder_topk_cohesion_etth1.yaml  residual_regime_autoencoder_topk_etth1.yaml  residual_regime_autoencoder_topk_etth1_patchtst_base.yaml  residual_regime_autoencoder_topk_etth2.yaml
croissant/: metadata.json
residualbench/: __init__.py  bench.py  methods.py  metrics.py
scripts/: download_data.py
scripts/regimes/: analyze_trivial_similarity.py  compute_bootstrap_wilcoxon.py  compute_cross_seed_all.py  compute_forecaster_seed_robustness.py  evaluate_regime_metrics.py  evaluate_regime_stability.py  evaluate_selectors.py  export_residual_dataset.py  generate_figures.py  plot_alignment_sources.py  run_full_benchmark.py  run_multi_horizon.py  run_multi_seed_forecasters.py  train_regime_autoencoder.py
tests/: test_residualbench.py
