[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "residualbench"
version = "0.1.0"
description = "ResidualBench: A Benchmark and Evaluation Protocol for Cross-Model Forecast Failure Mode Discovery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "einops>=0.7",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.27",
]

[tool.setuptools.packages.find]
include = ["src*", "residualbench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
